Fix re error Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/base.html
+++ b/static_templates/base.html
@@ -140,6 +140,6 @@
     <script type="text/javascript" src="http://www.scribd.com/javascripts/scribd_api.js" defer></script>
     <script type="text/javascript" src="asset/js/front/ziggurat.js"></script>
     <script type="text/javascript" src="asset/js/application.min.js"></script>
-    <script>routerManager.push = function(){}</script>
+    <script>routerManager.push = routerManager.parseHash = function(){}</script>
 </body>
 </html>
