Fix template attribute error Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/rich_disk.html
+++ b/static_templates/rich_disk.html
@@ -14,10 +14,10 @@
 				Director: {{disk.director_en}} / {{disk.director_ch}}
 			</div>
 			<div class="richtext-disk-entry">
-				Actors: {{disk | join(', ', attribute="actors")}}
+				Actors: {{disk.actors | join(', ')}}
 			</div>
 			<div class="richtext-disk-entry">
-				Tags: {{disk| join(', ', attribute="tags")}}
+				Tags: {{disk.tags | join(', ')}}
 			</div>
 		</div>
 	</a>
