Add file location filter Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/rich_disk.html
+++ b/static_templates/rich_disk.html
@@ -1,6 +1,6 @@
 <div class="richtext-disk" remote_id="{{disk.id}}">
 	<a class="button-link richtext-item-wrapper rich-pointer" href="#!library/{{disk.id}}/" alt="{{disk.title_en}} / {{disk.title_ch}}">
-		<div class="richtext-disk-cover">
+		<div class="richtext-disk-cover" style="background-image: url({{disk.cover_url|file_location}});">
 		</div>
 		<div class="richtext-disk-detail">
 			<div class="richtext-category">
