--- a/static_templates/rich_rfs.html
+++ b/static_templates/rich_rfs.html
@@ -4,19 +4,19 @@
 			Regular Film Show
 		</div>
 		<div class="richtext-rfs-detail">
-			<a class="button-link richtext-rfs-item" refer="1" href="#!library/{{rfs.film_1.id}}/" alt="The first film on vote">
+			<a class="button-link richtext-rfs-item" refer="1" href="#!library/{{rfs.film_1.id}}/" alt="The first film on vote" style="background-image: url({{rfs.film_1.cover_url|file_location}});">
 				<div class="rfs-cover-title">
 					{{rfs.film_1.title_en}}<br>
 					{{rfs.film_1.title_ch}}
 				</div>
 			</a>
-			<a class="button-link richtext-rfs-item" refer="2" href="#!library/{{rfs.film_2.id}}/" alt="The second film on vote">
+			<a class="button-link richtext-rfs-item" refer="2" href="#!library/{{rfs.film_2.id}}/" alt="The second film on vote" style="background-image: url({{rfs.film_2.cover_url|file_location}});">
 				<div class="rfs-cover-title">
 					{{rfs.film_2.title_en}}<br>
 					{{rfs.film_2.title_ch}}
 				</div>
 			</a>
-			<a class="button-link richtext-rfs-item" refer="3" href="#!library/{{rfs.film_3.id}}/" alt="The third film on vote">
+			<a class="button-link richtext-rfs-item" refer="3" href="#!library/{{rfs.film_3.id}}/" alt="The third film on vote" style="background-image: url({{rfs.film_3.cover_url|file_location}});">
 				<div class="rfs-cover-title">
 					{{rfs.film_3.title_en}}<br>
 					{{rfs.film_3.title_ch}}
