--- a/static_templates/rich_ticket.html
+++ b/static_templates/rich_ticket.html
@@ -1,6 +1,6 @@
 <div class="richtext-ticket" remote_id="{{ticket.id}}">
 	<a class="button-link richtext-item-wrapper rich-pointer" href="#!ticket/" alt="View ticket">
-		<div class="richtext-disk-cover">
+		<div class="richtext-disk-cover" style="background-image: url({{ticket.cover_url|file_location}});">
 		</div>
 		<div class="richtext-disk-detail">
 			<div class="richtext-category">
