Add escape to wrap. Add static Library pages Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/news.html
+++ b/static_templates/news.html
@@ -24,7 +24,7 @@
 				Published at {{news.create_log.created_at}}
 			</div>
 			<div class="news-content">
-				{{news.content|e|wrap|bbcode|safe}}
+				{{news.content|wrap|bbcode}}
 			</div>
 		</div>
 	</div>
