Add title and proper extends Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/library_list.html
+++ b/static_templates/library_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "library_base.html" %}
 {% block title %}{{title}}{% endblock %}
 {% block library_content %}
 <div class="library-list loading">
