Fix layout Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/library_base.html
+++ b/static_templates/library_base.html
@@ -24,7 +24,7 @@
 			</a>
 		</div>
 	</div>
-	<div class="right-panel" hidden>
+	<div class="right-panel">
 		{% block library_content %}{% endblock %}
 	</div>
 </div>
