Fix typo in template Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/library_disk.html
+++ b/static_templates/library_disk.html
@@ -78,7 +78,7 @@
 					<div class="diskreview-time">@{{review.create_log.created_at}}</div>
 					<div class="diskreview-content">{{review.content|wrap}}</div>
 				</div>
-				{% endblock %}
+				{% endfor %}
 			</div>
 		</div>
 		<div class="diskreview-input-box">
