Add cover to static disk page Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/library_disk.html
+++ b/static_templates/library_disk.html
@@ -26,7 +26,7 @@
 				{{disk.title_en}}&nbsp;/&nbsp;{{disk.title_ch}}<span class="year">&nbsp;({{disk.show_year}})</span>
 			</h2>
 			<div class="disk-brief">
-				<div class="disk-cover">
+				<div class="disk-cover" style="background-image: url({{disk.cover_url|file_location}});">
 				</div>
 				<div class="disk-info-1">
 
