Fix typo Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/ticket.html
+++ b/static_templates/ticket.html
@@ -32,7 +32,7 @@
 					</div>
 					<div class="ticket-info-1">
 
-						<div><span class="key">Director:</span> {{display_ticket.director_en}}&nbsp;/&nbsp;{{ticket.director_ch}}</div>
+						<div><span class="key">Director:</span> {{display_ticket.director_en}}&nbsp;/&nbsp;{{display_ticket.director_ch}}</div>
 
 						<div><span class="key">Stars:</span> {{display_ticket.actors | join(', ')}}</div>
 
