--- a/static_templates/ticket.html
+++ b/static_templates/ticket.html
@@ -28,7 +28,7 @@
 					{{display_ticket.title_en}}&nbsp;/&nbsp;{{display_ticket.title_ch}}
 				</h2>
 				<div class="ticket-brief">
-					<div class="ticket-cover">
+					<div class="ticket-cover" style="background-image: url({{display_ticket.cover_url|file_location}});">
 					</div>
 					<div class="ticket-info-1">
 
