Fix typo Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/document.html
+++ b/static_templates/document.html
@@ -34,7 +34,7 @@
 					</div>
 				</header>
 				<div class="doc-content">
-					<iframe class="doc-file" src="http://docs.google.com/viewer?url={{display_doc.doc_url|file_location|}}&embedded=true" sandbox="allow-scripts allow-same-origin"></iframe>
+					<iframe class="doc-file" src="http://docs.google.com/viewer?url={{display_doc.doc_url|file_location}}&embedded=true" sandbox="allow-scripts allow-same-origin"></iframe>
 				</div>
 			</div>
 		</div>
