--- a/static_templates/base.html
+++ b/static_templates/base.html
@@ -135,9 +135,9 @@
     </div>
 
     <!-- scripts -->
-    <script type="text/javascript" src="http://www.scribd.com/javascripts/scribd_api.js" defer></script>
     <script type="text/javascript" src="asset/js/front/ziggurat.js"></script>
     <script type="text/javascript" src="asset/js/application.min.js"></script>
+    <script type="text/javascript" src="http://www.scribd.com/javascripts/scribd_api.js"></script>
     {% block callback %}
     {% endblock %}
     <script>routerManager.push = routerManager.parseHash = function(){}</script>
