Fix typo Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/publication.html
+++ b/static_templates/publication.html
@@ -12,7 +12,7 @@
 			<div class="publication-magazine-list-wrapper">
 				{% for publication in sq["Magazine"] %}
 				<div class="publication-list-item">
-					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}}">
+					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}})">
 						<div class="publication-title">{{publication.title}}</div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 			<div class="publication-micromagazine-list-wrapper">
 				{% for publication in sq["MicroMagazine"] %}
 				<div class="publication-list-item">
-					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}}">
+					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}})">
 						<div class="publication-title">{{publication.title}}</div>
 					</div>
 				</div>
@@ -44,7 +44,7 @@
 			<div class="publication-podcast-list-wrapper">
 				{% for publication in sq["Podcast"] %}
 				<div class="publication-list-item">
-					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}}">
+					<div class="publication-cover" style="background-image:url({{publication.cover_url|file_location}})">
 						<div class="publication-title">{{publication.title}}</div>
 					</div>
 				</div>
