Add about us static page Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/base.html
+++ b/static_templates/base.html
@@ -130,7 +130,7 @@
         <a class="navigator" controls="ticket" href="#!ticket/">Preview Show Tickets</a>
         <a class="navigator" controls="document" href="#!document/">Documents</a>
         <a class="navigator" controls="publication" href="#!publication/">Publications</a>
-        <a class="navigator" controls="sponsor" href="#!sponsor/">Sponsors</a>
+        <a class="navigator" controls="sponsor" href="#!sponsor/" rel="nofollow">Sponsors</a>
         <a class="navigator-last" controls="about" href="#!about/">About Us</a>
     </div>
 
