Add description for distinct sections of the website. Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/aboutus.html
+++ b/static_templates/aboutus.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block desc %}Information of current session of Film Society, HKUSTSU. Our goal, motivation and our Executive-Committees.{% endblock %}
 {% block title %}About Us{% endblock %}
 {% block content %}
 <div class="aboutus-wrapper">
