--- a/static_templates/base.html
+++ b/static_templates/base.html
@@ -22,7 +22,7 @@
     <base href="http://ihome.ust.hk/~su_film/">
 
     <!-- site info -->
-    <meta name="description" content="Official Website of Film Society, HKUSTSU">
+    <meta name="description" content="{% block desc %}Official Website of Film Society, HKUSTSU{% endblock %}">
     <meta name="keywords" content="Film Soc, HKUSTSU, Film Society, HKUST, HKUST society, UST, Movie, Film">
     <meta name="author" content="John Tan">
     <meta name="contact" content="johnmave126@gmail.com">
