--- a/static_templates/document.html
+++ b/static_templates/document.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block desc %}Official Document of Film Society, HKUSTSU.{% endblock %}
 {% block title %}Document{% endblock %}
 {% block content %}
 <div class="doc-wrapper">
