--- a/static_templates/home.html
+++ b/static_templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block desc %}News and upcoming event of Film Society, HKUSTSU.w{% endblock %}
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="news-wrapper">
