--- a/static_templates/library_disk.html
+++ b/static_templates/library_disk.html
@@ -1,4 +1,5 @@
 {% extends "library_base.html" %}
+{% block desc %}Disk {{disk.title_en}}/{{disk.title_ch}}, hosted by Film Society, HKUSTSU. Members are free to borrow the disk.{% endblock %}
 {% block title %}{{disk.title_en}} {{disk.title_ch}}{% endblock %}
 {% block library_content %}
 <div class="library-disk">
