--- a/static_templates/library_list.html
+++ b/static_templates/library_list.html
@@ -1,4 +1,5 @@
 {% extends "library_base.html" %}
+{% block desc %}Disk list page {{page}}. VCD/DVD Library is hosted by Film Society, HKUSTSU. Members are free to borrow from the library.{% endblock %}
 {% block title %}{{title}}{% endblock %}
 {% block library_content %}
 <div class="library-list">
