--- a/static_templates/publication.html
+++ b/static_templates/publication.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block desc %}Magazines, podcasts, and micro-magazines published by Film Society, HKUSTSU to spread film culture among HKUST.{% endblock %}
 {% block title %}Publication{% endblock %}
 {% block content %}
 <div class="publication-wrapper">
