--- a/static_templates/ticket.html
+++ b/static_templates/ticket.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block desc %}Free Preview Show Tickets distributed by Film Society, HKUSTSU. Free for members.{% endblock %}
 {% block title %}Preview Show Tickets{% endblock %}
 {% block content %}
 <div class="ticket-wrapper">
