Fix whitespace Add alt to documents Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/static_templates/document.html
+++ b/static_templates/document.html
@@ -30,8 +30,8 @@
 						{{display_doc.title}}
 					</h2>
 					<div class="doc-action">
-						<a href="{{display_doc.doc_url|file_location}}?force_download=true&dn_name={{display_doc.name}}" alt="Download">Download</a>
-						<a href="{{display_doc.doc_url|file_location}}" target="_blank" alt="View in New Window">View in New Window</a>
+						<a href="{{display_doc.doc_url|file_location}}?force_download=true&dn_name={{display_doc.name}}" alt="Download {{doc.title}}">Download</a>
+						<a href="{{display_doc.doc_url|file_location}}" target="_blank" alt="{{doc.title}}">View in New Window</a>
 					</div>
 				</header>
 				<div class="doc-content">
